--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -47,6 +47,8 @@ $menu = wofi --show drun
 # exec-once = $terminal
 # exec-once = nm-applet &
 exec-once = waybar
+exec-once = swww-daemon
+exec-once = systemctl --user start hyprpolkitagent
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -89,8 +91,9 @@ general {
     border_size = 2
 
     # https://wiki.hypr.land/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
+    col.active_border = rgba(ffffffff) rgba(f5c2e7ff) 45deg
+    col.inactive_border = rgba(313244aa)
+
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false
@@ -107,7 +110,7 @@ decoration {
     rounding_power = 2
 
     # Change transparency of focused and unfocused windows
-    active_opacity = 1.0
+    active_opacity = 0.9
     inactive_opacity = 1.0
 
     shadow {
@@ -120,8 +123,8 @@ decoration {
     # https://wiki.hypr.land/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 3
-        passes = 1
+        size = 10
+        passes = 2
 
         vibrancy = 0.1696
     }
@@ -236,7 +239,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod, L, exec, ~/.config/waybar/lan.sh ,
+bind = $mainMod, L, exec, ~/.config/waybar/reload.sh
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
