--- a/matugen/config.toml
+++ b/matugen/config.toml
@@ -1,13 +1,24 @@
 [config.wallpaper]
 # Whether to set the wallpaper or not
-set = false
 command = "swww"
+arguments = ["img"]
 
 [templates.hyprland]
-input_path = '~/.config/matugen/hyprland-colors.conf'
-output_path = '~/.config/hypr/colors/colors.conf'
+input_path = '~/.config/matugen/templates/hyprland-colors.conf'
+output_path = '~/.config/hypr/colors.conf'
 
 
 [templates.kitty]
-input_path = '~/.config/matugen/kitty-colors.conf'
-output_path = '~/.config/kitty/colors/colors.conf'
+input_path = '~/.config/matugen/templates/kitty-colors.conf'
+output_path = '~/.config/kitty/colors.conf'
+
+
+[templates.rofi]
+input_path = '~/.config/matugen/templates/rofi-colors.rasi'
+output_path = '~/.config/rofi/colors.rasi'
+
+
+[templates.waybar]
+input_path = '~/.config/matugen/templates/colors.css'
+output_path = '~/.config/waybar/colors.css'
+post_hook = '~/.config/waybar/reload.sh'
