--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -1,54 +1,41 @@
 {
-    "layer": "top",
-    "modules-left": ["hyprland/workspaces"],
-    "modules-center": ["hyprland/window"],
-    "modules-right": ["pulseaudio", "network","clock",],
-    "clock": {
-        "format-alt": "{:%a, %d. %b  %H:%M}"
-    },
-"hyprland/workspaces": {
-  "format": "{name}",
-  "on-click": "activate",
-  "format-icons": {
-    "1": "1",
-    "2": "2",
-    "3": "3",
-    "4": "4",
-    "5": "5",
-    "urgent": "",
-    "active": "",
-    "default": ""
+  "layer": "top",
+  "modules-left": ["hyprland/workspaces"],
+  "modules-center": ["hyprland/window"],
+  "modules-right": ["pulseaudio", "network", "clock"],
+  "clock": {
+    "format-alt": "{:%a, %d. %b  %H:%M}"
   },
-  "sort-by-number": true
-},
 
-"hyprland/window": {
-    "format": "👉 {}",
-    "separate-outputs": true
-},
+  "hyprland/window": {
+    "format": "{initialTitle}",
+    "max-length": 30,
+    "separate-outputs": true,
+    "ellipsis": "…"
+  },
 
-"pulseaudio": {
+  "pulseaudio": {
     "format": "{volume}% {icon}",
     "format-bluetooth": "{volume}% {icon}",
     "format-muted": "",
     "format-icons": {
-        "alsa_output.pci-0000_00_1f.3.analog-stereo": "",
-        "alsa_output.pci-0000_00_1f.3.analog-stereo-muted": "",
-        "headphone": "",
-        "hands-free": "",
-        "headset": "",
-        "phone": "",
-        "phone-muted": "",
-        "portable": "",
-        "car": "",
-        "default": ["", ""]
+      "alsa_output.pci-0000_00_1f.3.analog-stereo": "",
+      "alsa_output.pci-0000_00_1f.3.analog-stereo-muted": "",
+      "headphone": "",
+      "hands-free": "",
+      "headset": "",
+      "phone": "",
+      "phone-muted": "",
+      "portable": "",
+      "car": "",
+      "default": ["", ""]
     },
     "scroll-step": 1,
     "on-click": "pavucontrol",
     "ignored-sinks": ["Easy Effects Sink"]
-},
+  },
 
-"network": {
+  "network": {
     "interface": "enp34s0",
     "format": "{ifname}",
     "format-wifi": "{essid} ({signalStrength}%) ",
@@ -59,5 +46,5 @@
     "tooltip-format-ethernet": "{ifname} ",
     "tooltip-format-disconnected": "Disconnected",
     "max-length": 50
-}
+  }
 }
