--- a/kitty/colors.conf
+++ b/kitty/colors.conf
@@ -1,11 +1,11 @@
-cursor #e2e3d8
-cursor_text_color #c5c8b9
+cursor #dee4e4
+cursor_text_color #bec8c9
 
-foreground            #e2e3d8
-background            #12140e
-selection_foreground  #2b331e
-selection_background  #c0caac
-url_color             #b4d088
+foreground            #dee4e4
+background            #0e1415
+selection_foreground  #1b3437
+selection_background  #b1cbce
+url_color             #80d4dc
 
 # black
 color8   #262626
@@ -25,7 +25,7 @@ color11  #c4c19e
 
 # blue
 /* color4  #8f8aac */
-color4  #b4d088
+color4  #80d4dc
 color12 #a39ec4
 
 # magenta
