--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -197,6 +197,7 @@ bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, L, exec, ~/.config/waybar/reload.sh
+bind = $mainMod, O, exec, ~/.config/hypr/configs/theme.sh
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
