--- a/hypr/colors.conf
+++ b/hypr/colors.conf
@@ -1,151 +1,151 @@
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
-$background = rgba(0f1416ff)
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
+$background = rgba(12140eff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
 $error = rgba(ffb4abff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
 $error_container = rgba(93000aff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
-$inverse_on_surface = rgba(2c3133ff)
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
+$inverse_on_surface = rgba(2f312aff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
-$inverse_primary = rgba(006879ff)
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
+$inverse_primary = rgba(4e662aff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
-$inverse_surface = rgba(dee3e5ff)
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
+$inverse_surface = rgba(e2e3d8ff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
-$on_background = rgba(dee3e5ff)
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
+$on_background = rgba(e2e3d8ff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
 $on_error = rgba(690005ff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
 $on_error_container = rgba(ffdad6ff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
-$on_primary = rgba(003640ff)
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
+$on_primary = rgba(213600ff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
-$on_primary_container = rgba(abedffff)
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
+$on_primary_container = rgba(cfeda1ff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
-$on_primary_fixed = rgba(001f26ff)
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
+$on_primary_fixed = rgba(111f00ff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
-$on_primary_fixed_variant = rgba(004e5cff)
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
+$on_primary_fixed_variant = rgba(374e14ff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
-$on_secondary = rgba(1d343aff)
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
+$on_secondary = rgba(2b331eff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
-$on_secondary_container = rgba(cee7eeff)
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
+$on_secondary_container = rgba(dce7c7ff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
-$on_secondary_fixed = rgba(061f24ff)
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
+$on_secondary_fixed = rgba(161e0aff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
-$on_secondary_fixed_variant = rgba(334a51ff)
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
+$on_secondary_fixed_variant = rgba(414a33ff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
-$on_surface = rgba(dee3e5ff)
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
+$on_surface = rgba(e2e3d8ff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
-$on_surface_variant = rgba(bfc8cbff)
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
+$on_surface_variant = rgba(c5c8b9ff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
-$on_tertiary = rgba(282f4dff)
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
+$on_tertiary = rgba(003734ff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
-$on_tertiary_container = rgba(dde1ffff)
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
+$on_tertiary_container = rgba(bcece6ff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
-$on_tertiary_fixed = rgba(131a37ff)
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
+$on_tertiary_fixed = rgba(00201eff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
-$on_tertiary_fixed_variant = rgba(3e4565ff)
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
+$on_tertiary_fixed_variant = rgba(1f4e4aff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
-$outline = rgba(899295ff)
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
+$outline = rgba(8f9285ff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
-$outline_variant = rgba(3f484bff)
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
+$outline_variant = rgba(45483dff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
-$primary = rgba(84d2e6ff)
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
+$primary = rgba(b4d088ff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
-$primary_container = rgba(004e5cff)
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
+$primary_container = rgba(374e14ff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
-$primary_fixed = rgba(abedffff)
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
+$primary_fixed = rgba(cfeda1ff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
-$primary_fixed_dim = rgba(84d2e6ff)
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
+$primary_fixed_dim = rgba(b4d088ff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
 $scrim = rgba(000000ff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
-$secondary = rgba(b2cbd2ff)
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
+$secondary = rgba(c0caacff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
-$secondary_container = rgba(334a51ff)
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
+$secondary_container = rgba(414a33ff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
-$secondary_fixed = rgba(cee7eeff)
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
+$secondary_fixed = rgba(dce7c7ff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
-$secondary_fixed_dim = rgba(b2cbd2ff)
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
+$secondary_fixed_dim = rgba(c0caacff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
 $shadow = rgba(000000ff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
-$source_color = rgba(4bdbfaff)
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
+$source_color = rgba(d6f3a9ff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
-$surface = rgba(0f1416ff)
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
+$surface = rgba(12140eff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
-$surface_bright = rgba(343a3cff)
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
+$surface_bright = rgba(383a32ff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
-$surface_container = rgba(1b2122ff)
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
+$surface_container = rgba(1e2019ff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
-$surface_container_high = rgba(252b2dff)
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
+$surface_container_high = rgba(282b23ff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
-$surface_container_highest = rgba(303638ff)
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
+$surface_container_highest = rgba(33362eff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
-$surface_container_low = rgba(171c1eff)
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
+$surface_container_low = rgba(1a1c16ff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
-$surface_container_lowest = rgba(090f11ff)
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
+$surface_container_lowest = rgba(0d0f09ff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
-$surface_dim = rgba(0f1416ff)
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
+$surface_dim = rgba(12140eff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
-$surface_tint = rgba(84d2e6ff)
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
+$surface_tint = rgba(b4d088ff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
-$surface_variant = rgba(3f484bff)
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
+$surface_variant = rgba(45483dff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
-$tertiary = rgba(bec4ebff)
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
+$tertiary = rgba(a0d0caff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
-$tertiary_container = rgba(3e4565ff)
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
+$tertiary_container = rgba(1f4e4aff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
-$tertiary_fixed = rgba(dde1ffff)
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
+$tertiary_fixed = rgba(bcece6ff)
 
-$image = /home/nekokaito/Pictures/Wallpapers/1.jpg
-$tertiary_fixed_dim = rgba(bec4ebff)
+$image = /home/nekokaito/Pictures/Wallpapers/5.png
+$tertiary_fixed_dim = rgba(a0d0caff)
 
