--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -196,6 +196,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+
 bind = $mainMod, L, exec, ~/.config/waybar/reload.sh
 bind = $mainMod, O, exec, ~/.config/hypr/configs/theme.sh
 
@@ -254,6 +255,16 @@ bindl = , XF86AudioNext, exec, playerctl next
 bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
+
+# shutdown
+bind = $mainMod, END, exec, systemctl poweroff
+
+# reboot
+bind = $mainMod, F11, exec, systemctl reboot
+# uefi reboot
+bind = $mainMod, DELETE, exec, systemctl reboot --firmware-setup
+
+
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
