--- a/kitty/colors.conf
+++ b/kitty/colors.conf
@@ -1,11 +1,11 @@
-cursor #dee3e5
-cursor_text_color #bfc8cb
+cursor #e2e3d8
+cursor_text_color #c5c8b9
 
-foreground            #dee3e5
-background            #0f1416
-selection_foreground  #1d343a
-selection_background  #b2cbd2
-url_color             #84d2e6
+foreground            #e2e3d8
+background            #12140e
+selection_foreground  #2b331e
+selection_background  #c0caac
+url_color             #b4d088
 
 # black
 color8   #262626
@@ -25,7 +25,7 @@ color11  #c4c19e
 
 # blue
 /* color4  #8f8aac */
-color4  #84d2e6
+color4  #b4d088
 color12 #a39ec4
 
 # magenta
